2012-02-23  Kirit Saelensminde  <kirit@felspar.com>
 Added a form field and basic widget for the RemoteForeignKey model field type.

2012-02-22  Kirit Saelensminde  <kirit@felspar.com>
 Added a RemoteForeignKey field type which can be used to handle Slumber objects running in the same or remote services.

2012-02-18  Kirit Saelensminde  <kirit@felspar.com>
 Added a proxy method for the model create operation. This has also changed the data returned by the old create operation.
 Added CSRF bypassing on the Slumber views (if the version of Django uses CSRF).
 Internal services now get the application directly rather than what would have been the service root.

2012-02-17  Kirit Saelensminde  <kirit@felspar.com>
 Added tests for Django 1.4.
 Added an incomplete version of a new configuration that will allow specific Django applications to be exposed on specific service names.

2012-01-30  Kirit Saelensminde  <kirit@felspar.com>
 Forced the model URL used for the type name to be a str as some Windows boxes seem to get Unicode strings for the URLs where most machines gets normal Python strings.

2012-01-16  Kirit Saelensminde  <kirit@felspar.com>
 The server side conversion to JSON compatible Python objects now includes the request so that, for example, URIs can be handled correctly.
 The Slumber configuration now also allows us to add in JSON transform functions for specific types for when property values are processed.

2012-01-12  Kirit Saelensminde  <kirit@felspar.com>
 Renamed the slumber_test folder to slumber_examples.
 Added the beginnings of the server side configuration by allowing model properties to be exposed.

2011-12-29  Kirit Saelensminde  <kirit@felspar.com>
 Fixed the license information in the setup tags.
 Removed the .idea files generated by some IDE.

2011-12-02  Kirit Saelensminde  <kirit@felspar.com>
 The authentication back end now copies across the attribute values and resets them on the local user each time the user is fetched from the backend.